--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,51 @@
   </script>
 
 </head>
+ <!--Responsive Nav Bar-->
+ <nav class="bg-green-100 p-3 flex items-center justify-between shadow-2xl sticky top-0 z-10">
+  <h1 class="text-2xl">Greenden</h1>
+  <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+    class="w-6 h-6 md:hidden cursor-pointer ">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+  </svg>
+
+  <ul class="flex gap-5 text-gray-600 hidden  md:flex">
+    <li>
+      <a class="hover:underline hover:text-black" href="index.html">Home</a>
+    </li>
+    <li>
+      <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+    </li>
+    <li>
+      <a class="hover:underline  hover:text-black" href="contact.html">Contact</a>
+    </li>
+  </ul>
+</nav>
+<!--Side Navbar-->
+<section id="sidenav" class="bg-green-100 fixed z-20 top-0 right-0 transition-all duration-1000" style="width: 50%; height: 100vh; right: -50%;">
+  <div class="text-right p-5">
+    <p id="close-nav"class="inline cursor-pointer ">X</p>
+  </div>
+
+  <ul class="flex flex-col items-center gap-10 text-gray-600   md:flex">
+    <li>
+      <a class="hover:underline hover:text-black" href="index.html">Home</a>
+    </li>
+    <li>
+      <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+    </li>
+    <li>
+      <a class="hover:underline  hover:text-black" href="contact.html">Contact</a>
+    </li>
+  </ul>
+</section>
 <section class="bg-white dark:bg-gray-900">
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h2>
         <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Got a technical issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
-        <form action="#" class="space-y-8">
+        <form action="#" class="spac
+        
+        e-y-8">
             <div>
                 <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
                 <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light" placeholder="Your Email" required>
@@ -40,3 +80,10 @@
         </form>
     </div>
   </section>
+   <!--Footer-->
+<section class="bg-green-100  m-3">
+  <h1 class="font-bold text-3xl p-1 m-3">Greenden</h1>
+  <p class="p-1 m-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eos.</p>
+  <p class="p-1">&copy 2021 Greenden.com</p>
+</section>
+  <script src="contact.js"></script>
