--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <!-- Responsive Navbar-->
   <nav class="bg-green-100 p-3 flex items-center justify-between shadow-2xl sticky top-0 z-10">
     <h1 class="text-2xl">Greenden</h1>
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-      class="w-6 h-6 md:hidden">
+    <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+      class="w-6 h-6 md:hidden cursor-pointer ">
       <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
     </svg>
 
@@ -42,6 +42,24 @@
       </li>
     </ul>
   </nav>
+  <!--Side Navbar-->
+  <section id="sidenav" class="bg-green-100 fixed z-20 top-0 right-0 transition-all duration-1000" style="width: 50%; height: 100vh; right: -50%;">
+    <div class="text-right p-5">
+      <p id="close-nav"class="inline cursor-pointer ">X</p>
+    </div>
+
+    <ul class="flex flex-col items-center gap-10 text-gray-600   md:flex">
+      <li>
+        <a class="hover:underline hover:text-black" href="">Home</a>
+      </li>
+      <li>
+        <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+      </li>
+      <li>
+        <a class="hover:underline  hover:text-black" href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </section>
   <!--Header Section-->
 
   <section class="bg-green-100 p-4 flex justify-center md:justify-evenly  ">
@@ -161,6 +179,7 @@
   <p class="p-1 m-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eos.</p>
   <p class="p-1">&copy 2021 Greenden.com</p>
 </section>
+<script src="index.js"></script>
 </body>
 
 </html>
