--- a/product.html
+++ b/product.html
@@ -20,17 +20,54 @@
 <body>
     <!--Responsive Nav Bar-->
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-2xl sticky top-0 z-10">
+      <h1 class="text-2xl">Greenden</h1>
+      <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="w-6 h-6 md:hidden cursor-pointer ">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+  
+      <ul class="flex gap-5 text-gray-600 hidden  md:flex">
+        <li>
+          <a class="hover:underline hover:text-black" href="index.html">Home</a>
+        </li>
+        <li>
+          <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+        </li>
+        <li>
+          <a class="hover:underline  hover:text-black" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <!--Side Navbar-->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 right-0 transition-all duration-1000" style="width: 50%; height: 100vh; right: -50%;">
+      <div class="text-right p-5">
+        <p id="close-nav"class="inline cursor-pointer ">X</p>
+      </div>
+  
+      <ul class="flex flex-col items-center gap-10 text-gray-600   md:flex">
+        <li>
+          <a class="hover:underline hover:text-black" href="index.html">Home</a>
+        </li>
+        <li>
+          <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+        </li>
+        <li>
+          <a class="hover:underline  hover:text-black" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </section>
+    <!-- <nav class="bg-green-100 p-3 flex items-center justify-between shadow-2xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
         <svg xmlns="http://www.w3.org/2000/svg"  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 ">
           <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
         </svg>
         
-      </nav>
+      </nav> -->
       <!--Products-->
       <section class="text-center">
         <h1 class="text-3xl font-bold m-3">Our Products</h1>
-        <input type="text" style="width: 60%" class=" p-3 m-5 border border-black" placeholder="Search for a product" >
-        <div class="grid grid-cols-2 gap-5 md:grid-cols-4 "> 
+        <input id="search" type="text" style="width: 60%" class=" p-3 m-5 border border-black" placeholder="Search for a product" >
+        <div id="product-container" class="grid grid-cols-2 gap-5 md:grid-cols-4 "> 
           <div>
             <img src="images/bestseller_1.jpg"  class="inline hover:shadow-xl transform hover:-translate-y-2" alt="">
             <h1>Rose Plant</h1>
@@ -80,6 +117,7 @@
   <p class="p-1 m-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, eos.</p>
   <p class="p-1">&copy 2021 Greenden.com</p>
 </section>
+<script src="product.js"></script>
       
 </body>
 </html>
